--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb+srv://swapnil:swapnil@cluster1.zs1k3nh.mongodb.net/"
+MONGO_URL=mongodb+srv://swapnil:swapnil@cluster1.zs1k3nh.mongodb.net/
 JWT_ACCESS_SECRET=anshu
 EMAIL= exchangeavtar@gmail.com
 PASSWORD= qupqafsktcehecmg
