--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ PORT= 4000
 ADMIN_EMAIL = exchangeavtar@gmail.com
 ADMIN_PASSWORD = anshu
 EMAIL_FROM=exchangeavtar@gmail.com
-REDIS_HOST= rediss://default:AWjYAAIjcDE2OWM2OTBkYWU1ZWQ0MDMzOGYyYTk4MmE5YTMzNjA5OXAxMA@sound-bee-26840.upstash.io:6379
+REDIS_HOST=redis://default:AVrgAAIjcDFlYTg0YjY4YzYyNWE0NzBhYjQ4NTY5M2E0OWYxYWI5YnAxMA@heroic-bluebird-23264.upstash.io:6379
 REDIS_PORT= 6379
 SMTP_HOST= smtp.mailgun.org
 SMTP_SECURE= false
